SUBDIRS = @INFERNAL11_DIR@ @INFERNAL07_EASELDIR@ @INFERNAL07_SQUIDDIR@ @INFERNAL07_SRCDIR@ @VIENNA_DIR@ @VIENNA171_DIR@ @CMFINDER03_DIR@ @CMFINDER04_DIR@ @QRNA_DIR@ @PSCORE_DIR@ @PFOLD_DIR@ @CLUSTALW_DIR@ @HMMPAIR_DIR@

install :
	@echo There is no installation.  You just run the programs from this directory tree.  See the user-manual for details.
