
#BTW, the code here seems to be derived from Vienna-1.4

DEFAULT_INCLUDES= # otherwise automake includes every directory it knows about, which is fine, but kinda overkill and maybe a bit risky

noinst_LIBRARIES=libvienna.a
libvienna_a_SOURCES=dist_vars.c energy_par.c fold_vars.c read_epars.c utils.c edit_cost.c fold.c part_func.c treedist.c
